se agregó el bloque de scheduling

--- a/src/containers/CPU/bloque/Bloque.css
+++ b/src/containers/CPU/bloque/Bloque.css
@@ -21,3 +21,8 @@
     float: left;
     height:100%;
 }
+.Scheduling .relleno{
+    font-size: 18px;
+    padding-top:3px;
+    padding-left:3px;
+}
