bloqueado a listo ya jala bien ahora si XD

--- a/src/containers/interrupciones/Interrupciones.css
+++ b/src/containers/interrupciones/Interrupciones.css
@@ -19,4 +19,10 @@
 .Conten button{
     float: left;
     margin-top:10px;
+    padding-bottom:2px;
+}
+.Conten .paginas{
+    float: left;
+    margin-top:10px;
+
 }
